M62: fix fontsize on mobile;

--- a/resources/assets/sass/frontend/index.scss
+++ b/resources/assets/sass/frontend/index.scss
@@ -123,7 +123,7 @@
     text-align: center;
     background: $redBackground;
     padding: 8px 10px;
-    color: #ffffff;
+    color: $white;
     border-radius: 3px;
     -o-border-radius: 3px;
     -moz-border-radius: 3px;
